--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "bootstrap-vue": "^2.0.0-rc.11",
     "dotenv-webpack": "^1.5.7",
     "firebase": "^5.5.8",
     "vue": "^2.5.2",
